--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,13 +19,14 @@ dependencies:
   bloc: ^8.1.4
   http: ^1.2.1
   crypto: ^3.0.3
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   
-  flutter_lints: ^3.0.2
+  flutter_lints: ^4.0.0
 
 
 flutter:
